--- a/WebBasicsStyle.css
+++ b/WebBasicsStyle.css
@@ -5,7 +5,9 @@ pink #F1C0E6
 brown #80523E
 unclick, click #CE3666, 
 */
-
+* {
+    border: 1px solid black;
+}
 body {
     font-family: sans-serif;
     background-color: #80523E;
@@ -74,5 +76,5 @@ ol {
         color: #F1C0E6;
         text-decoration: none;
     }
-    :visited color: #F1C0E6;
+    :visited {color: #F1C0E6;}
 }
