--- a/WebBasicsStyle.css
+++ b/WebBasicsStyle.css
@@ -23,20 +23,22 @@ h1:hover {color: forestgreen}*/
 
 .header {
     font-family: cursive;
+    font-size: 40px;
     text-align: center;
     color: #F1C0E6;
     background-color: #80523E;
     width: 10em;
     height: 80px;
     margin: auto;
+    text-decoration: none;
+    
 }
+
+
 .header p {
     color: #F1C0E6;
     font-size: 40px; 
 
-}
-
-.header a{
 }
 
 
@@ -53,6 +55,61 @@ h1:hover {color: forestgreen}*/
     color: #80523E;
     background-color: #F1C0E6;
 }
+
+ol {
+    padding-bottom: 1em;
+}
+
+footer {
+    font-family: cursive;
+    font-size: .5em;
+    color: #80523E;
+    background-color: #F1C0E6;
+    margin: 10px;
+    padding: 10px 50px;
+    border: 0px;
+    border-style: solid;
+    border-color; 
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    text-align: left;
+    :link{
+        text-decoration: none;
+    }
+}
+/*I am sure there's a way to make it so that I can set the :visited pseudoclass to have the color = the :link color but I couldn't figure out how so each home button has a different class. Or there isn't a way and using an image would be better*/
+
+.NYUHome {
+    text-decoration: none;
+}
+
+.NYUHome :link {
+    text-decoration: none;
+}
+
+.NYUHome :visited {
+    color: #57068C;
+    text-decoration: none;
+}
+
+.PrattHome {
+    text-decoration: none;
+}
+.PrattHome :link{
+    text-decoration: none;
+    color: #FFC819;
+}
+
+.PrattHome :visited {
+    text-decoration: none;
+    color: #FFC819;
+}
+
+.PrattHome :hover {
+    background-color: black;
+}
+
 
 
 
@@ -77,7 +134,9 @@ td {
     color: #57068C; 
     font-family: sans-serif; /*research if I can legally add NYU Perstare*/
   /*  :link {color: #57068C} */
-    :hover {color: #57068C}
+    :hover {
+        color: #57068C;
+    }
 } 
 
 #Pratt {
@@ -86,37 +145,17 @@ td {
    /* :link {color: #FFC819}*/
     :hover {color: #FFC819;
     }
+
 } 
 
 
-
-footer {
-    font-family: cursive;
-    font-size: .5em;
-    color: #80523E;
-    background-color: #F1C0E6;
-    margin: 10px;
-    padding: 10px 50px;
-    border: 0px;
-    border-style: solid;
-    border-color;
-    position: fixed;
-    bottom: 0;
-    text-align: left;
-   
-}
-ol {
-    padding-bottom: 1em;
+.navbar {
+   /* position: fixed;
+    bottom: 0; */
+    
 }
 
-.header {
-    font-family: cursive;
-    font-size: 40px;
-    text-align: center;
-    color: #F1C0E6;
-    :link {
-        color: #F1C0E6;
-        text-decoration: none;
-    }
-    :visited {color: #F1C0E6;}
-}
+
+
+
+
