--- a/WebBasicsStyle.css
+++ b/WebBasicsStyle.css
@@ -68,6 +68,7 @@ ol {
 
 .NYUHome {
     text-decoration: none;
+    color: #57068C; 
 }
 
 .NYUHome :link {
@@ -81,6 +82,7 @@ ol {
 
 .PrattHome {
     text-decoration: none;
+    color: #FFC819;
 }
 .PrattHome :link{
     text-decoration: none;
@@ -95,6 +97,8 @@ ol {
 .PrattHome :hover {
     background-color: black;
 }
+
+
 
 
 
@@ -120,22 +124,22 @@ td {
     color: #57068C; 
     /*font-family: sans-serif; research if I can legally add NYU Perstare (and want to)*/
   /*  :link {color: #57068C} */
-    :hover {
-        color: #57068C;
-    }
+    
 } 
+#NYU :hover {
+        color: #57068C
+}
 
 #Pratt {
     color: #FFC819; /*options #FFC819, #F9BE28*/
     /* font-family: sans-serif;  research Pratt's font*/
    /* :link {color: #FFC819}*/
-    :hover {color: #FFC819;
-    }
-    :focus {
-        color: black;
-    }
 
 } 
+
+#Pratt :hover {
+        color: #FFC819
+}
 
 
 .navbar {
@@ -144,7 +148,7 @@ td {
     padding: 0px;
     border: 0px;
     border-style: solid;
-    border-color; 
+   /* border-color; */
     position: fixed;
     bottom: 0; 
     left: 0;
@@ -166,7 +170,8 @@ footer {
     bottom: 0;
     right: 0;
     text-align: left;
-    :link{
+    
+}
+footer :link{
         text-decoration: none;
     }
-}
